--- a/proyecto/login.html
+++ b/proyecto/login.html
@@ -38,7 +38,7 @@
         </div> 
     </form>
 
-    <script src="scripts/app.js"></script>
+    <script src="scripts/validacion_login.js"></script>
 </body>
 
 </html>
